# NewsAutomation

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: news.py  script.py  user.py  video.py
backend/app/routers/: auth.py  avatar.py  news.py  script.py  settings.py  video.py  voice.py  youtube.py
backend/app/schemas/: auth.py  news.py  script.py  video.py
backend/app/services/: avatar_service.py  news_service.py  script_service.py  verification_service.py  video_service.py  voice_service.py  youtube_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Create.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx  Settings.tsx  Videos.tsx
frontend/src/types/: index.ts
